Update Work Entry Api
